--- a/CSS/02. CSS-Presentation/2. Forum Posts.html
+++ b/CSS/02. CSS-Presentation/2. Forum Posts.html
@@ -15,8 +15,8 @@
                 <h1>
 
                     <a href="#">
-                        Sample Logo
-                       <!-- <img src="images/Sample%20Logo.png" />-->
+                        <!--Sample Logo-->
+                        <img src="images/Sample%20Logo.png" />
                     </a>
                 </h1>
             </div>
