--- a/CSS/02. CSS-Presentation/3. Nested Divs.html
+++ b/CSS/02. CSS-Presentation/3. Nested Divs.html
@@ -8,84 +8,81 @@
         div {
             width: 97%;
             background-color: black;
-            border: 1px solid red;
+            border: 2px solid hidden;
+            border-radius: 60px;
+        }
+        
+        .nested {
+            width: 97%;
+            background-color: black;
+            border: 2px solid red;
             border-radius: 60px;
         }
     </style>
 </head>
 
 <body>
-    <div>
+    <div class="nested">
         <div>
             <div>
-                <div>
+                <div class="nested">
                     <div>
                         <div>
-                            <div>
+                            <div class="nested">
                                 <div>
                                     <div>
-                                        <div>
+                                        <div class="nested">
                                             <div>
                                                 <div>
-
-                                                    <div>
-
+                                                    <div class="nested">
                                                         <div>
-
                                                             <div>
-
-                                                                <div>
-
+                                                                <div class="nested">
                                                                     <div>
                                                                         <div>
-                                                                            <div>
+                                                                            <div class="nested">
                                                                                 <div>
                                                                                     <div>
-                                                                                        <div>
+                                                                                        <div class="nested">
                                                                                             <div>
                                                                                                 <div>
-                                                                                                    <div>
+                                                                                                    <div class="nested">
                                                                                                         <div>
                                                                                                             <div>
-                                                                                                                <div>
+                                                                                                                <div class="nested">
                                                                                                                     <div>
                                                                                                                         <div>
-                                                                                                                            <div>
+                                                                                                                            <div class="nested">
                                                                                                                                 <div>
                                                                                                                                     <div>
-                                                                                                                                        <div>
+                                                                                                                                        <div class="nested">
                                                                                                                                             <div>
                                                                                                                                                 <div>
-                                                                                                                                                    <div>
+                                                                                                                                                    <div class="nested">
                                                                                                                                                         <div>
                                                                                                                                                             <div>
-                                                                                                                                                                <div>
+                                                                                                                                                                <div class="nested">
                                                                                                                                                                     <div>
                                                                                                                                                                         <div>
-                                                                                                                                                                            <div>
-
+                                                                                                                                                                            <div class="nested">
                                                                                                                                                                                 <div>
-
                                                                                                                                                                                     <div>
-
-                                                                                                                                                                                        <div>
-
+                                                                                                                                                                                        <div class="nested">
                                                                                                                                                                                             <div>
-
                                                                                                                                                                                                 <div>
-                                                                                                                                                                                                    <div>
+                                                                                                                                                                                                    <div class="nested">
                                                                                                                                                                                                         <div>
                                                                                                                                                                                                             <div>
-                                                                                                                                                                                                                <div>
+                                                                                                                                                                                                                <div class="nested">
                                                                                                                                                                                                                     <div>
                                                                                                                                                                                                                         <div>
-                                                                                                                                                                                                                            <div>
+                                                                                                                                                                                                                            <div class="nested">
                                                                                                                                                                                                                                 <div>
                                                                                                                                                                                                                                     <div>
-                                                                                                                                                                                                                                        <div>
+                                                                                                                                                                                                                                        <div class="nested">
                                                                                                                                                                                                                                             <div>
                                                                                                                                                                                                                                                 <div>
-                                                                                                                                                                                                                                                    <div>
+                                                                                                                                                                                                                                                    <div class="nested">
                                                                                                                                                                                                                                                         <div>
 
                                                                                                                                                                                                                                                         </div>
