--- a/CSS/02. CSS-Presentation/4. Windows Calculator.html
+++ b/CSS/02. CSS-Presentation/4. Windows Calculator.html
@@ -24,7 +24,12 @@
             </tr>
             <tr>
 
-                <td colspan="9" class="border" id="bin">000000000 <br>000000000</td>
+                <td colspan="9" class="border" id="bin">
+                    <p class="bit">0000 0000 0000 0000 0000 0000 0000 0000</p>
+                    <p class="nums">63 47 32</p>
+                    <p class="bit">0000 0000 0000 0000 0000 0000 0000 0000</p>
+                    <p class="nums">31 15 0</p>
+                </td>
             </tr>
             <tr>
                 <td rowspan="3" class="border">
@@ -55,8 +60,8 @@
                 <td><input type="button" name="inactive" value="&#8730"></td>
             </tr>
             <tr>
-                <td><input type="button" name="active" value="Rol"></td>
-                <td><input type="button" name="active" value="Ror"></td>
+                <td><input type="button" name="active" value="RoL"></td>
+                <td><input type="button" name="active" value="RoR"></td>
                 <td><input type="button" name="inactive" value="C"></td>
                 <td><input type="button" name="active" value="7"></td>
                 <td><input type="button" name="active" value="8"></td>
