--- a/CSS/4. CSS Layout/2. Music Categories.html
+++ b/CSS/4. CSS Layout/2. Music Categories.html
@@ -10,11 +10,16 @@
 <body>
     <div id="main">
         <span>Music Catagories</span>
-        <div class="inner"><img src="./images/ultra-music-festival-2016-1.jpg" alt="Music">
-            <div class="text">In 2016 Ultra Music Festival celebrated its eighteenth edition this weekend at <strong>Bayfront Park in Downtown</strong></div>
-            <div class="button">
-                <input type="button" name="Listen" value="Listen">
-                <input type="button" name="Add" value="Add">
+        <div class="inner">
+            <div class="img">
+                <img src="./images/ultra-music-festival-2016-1.jpg" alt="Music">
+            </div>
+            <div class="but-text">
+                <div class="text">In 2016 Ultra Music Festival celebrated this weekend at <strong>Bayfront Park in Downtown</strong></div>
+                <div class="button">
+                    <input type="submit" name="Listen" id="listen" value="Listen">
+                    <input type="submit" name="Add" value="Add">
+                </div>
             </div>
         </div>
         <div class="inner"></div>
