--- a/CSS/4. CSS Layout/3. Members login.html
+++ b/CSS/4. CSS Layout/3. Members login.html
@@ -9,8 +9,22 @@
 
 <body>
     <div id="main">
-        <div class="headdiv"></div>
-        <div class="bodydiv"></div>
+        <div class="headdiv">
+            <img src="./images/monitor.png" alt="">
+            <span>members login:</span>
+            <input type="input" name="name" placeholder="Your name">
+            <input type="email" name="email" placeholder="Email Id">
+            <input type="submit" name="submit" value="GO" class="submit">
+
+        </div>
+        <div class="bodydiv">
+            <h1>about total management?</h1>
+            <p>Total Maanagement is a free, tableless, W3C-compliant web design layout by Tamplete <br/>World. This tamplete has been tested and proven compatible with all major browser <br/>environments and operating systems. You are free to modify the
+                design to suit your <br/>tastes in any way you like.
+            </p>
+            <p>We only ask you to not remove <span>"Design by Template World"</span> and the link http://www.templateworld.com from the footerof the template. <br/>If you are intrested in seeing more of our free web template designs feel free to visit our<br/>                website, Template World. we intend to add at least 25 new free templates in the coming <br/>month.
+            </p>
+        </div>
     </div>
 </body>
 
