Complete CSS Problem 03.02

--- a/CSS/4. CSS Layout/2. Music Categories.html
+++ b/CSS/4. CSS Layout/2. Music Categories.html
@@ -4,6 +4,8 @@
 <head>
     <title>Music Categories</title>
     <meta charset="UTF-8">
+    <link href="./../normalize.css" rel="stylesheet">
+
     <link href="./CSS/2. Music Categories.css" rel="stylesheet">
 </head>
 
@@ -17,13 +19,35 @@
             <div class="but-text">
                 <div class="text">In 2016 Ultra Music Festival celebrated this weekend at <strong>Bayfront Park in Downtown</strong></div>
                 <div class="button">
-                    <input type="submit" name="Listen" id="listen" value="Listen">
+                    <input type="submit" name="Listen" class="listen" value="Listen">
                     <input type="submit" name="Add" value="Add">
                 </div>
             </div>
         </div>
-        <div class="inner"></div>
-        <div class="inner"></div>
+        <div class="inner">
+            <div class="img">
+                <img src="./images/david Guetta.jpg" alt="Music">
+            </div>
+            <div class="but-text">
+                <div class="text">Don't miss performances from Afrojack, Steve Angello, Hardwell, Tiësto, Nicky Romero, David Guetta</div>
+                <div class="button">
+                    <input type="submit" name="Listen" class="listen" value="Listen">
+                    <input type="submit" name="Add" value="Add">
+                </div>
+            </div>
+        </div>
+        <div class="inner">
+            <div class="img">
+                <img src="./images/tomorrowland.jpg" alt="Music">
+            </div>
+            <div class="but-text">
+                <div class="text">Tomorrowland Mainstage, Live DJ sets on the local UNITE stage and the unique, magical Tomorrowland</div>
+                <div class="button">
+                    <input type="submit" name="Listen" class="listen" value="Listen">
+                    <input type="submit" name="Add" value="Add">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
