--- a/CSS/4. CSS Layout/1. Tree view.html
+++ b/CSS/4. CSS Layout/1. Tree view.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>Tree View</title>
     <meta charset="UTF-8">
     <link href="./CSS/1. Tree view.css" rel="stylesheet">
 </head>
