--- a/CSS/4. CSS Layout/4. CSS Documentation site.html
+++ b/CSS/4. CSS Layout/4. CSS Documentation site.html
@@ -8,8 +8,12 @@
 </head>
 
 <body>
-    <div class="left"></div>
-    <div class="middle"></div>
+    <div class="left">
+        <h6>HOME</h6>
+    </div>
+    <div class="middle">
+        <h2>Е до тук ми стигна времето...</h2>
+    </div>
     <div class="right"></div>
 </body>
 
