CSS Homework Time finish

--- a/CSS/4. CSS Layout/4. CSS Documentation site.html
+++ b/CSS/4. CSS Layout/4. CSS Documentation site.html
@@ -10,6 +10,44 @@
 <body>
     <div class="left">
         <h6>HOME</h6>
+        <p class="red">CSS Basic</p>
+        <p>CSS Introproduction</p>
+        <p>CSS Syntax</p>
+        <p>CSS How To</p>
+        <p>CSS Background</p>
+        <p>CSS Text</p>
+        <p>CSS Font</p>
+        <p>CSS Border</p>
+        <p>CSS Outline</p>
+        <p>CSS Margin</p>
+        <p>CSS Padding</p>
+        <p>CSS List</p>
+        <p>CSS Table</p>
+        <p class="red">CSS Advanced</p>
+        <p>CSS Dimension</p>
+        <p>CSS Classification</p>
+        <p>CSS Possitioning</p>
+        <p>CSS Pseudo-Class</p>
+        <p>CSS Pseudo-Elements</p>
+        <p>CSS Image-Gallery</p>
+        <p>CSS Image Opacity</p>
+        <p>CSS Madia-Types</p>
+        <p>CSS Don't</p>
+        <p>CSS Summary</p>
+        <p class="red">CSS Examples</p>
+        <p>CSS Examples</p>
+        <p class="red">References</p>
+        <p>CSS2 References</p>
+        <p>CSS2 Print</p>
+        <p>CSS2 Aural</p>
+        <p>CSS Units</p>
+        <p>CSS Colors</p>
+        <p>CSS Colorvalues</p>
+        <p>CSS Colornames</p>
+        <p class="red">CSS Quiz</p>
+        <p>CSS Quiz</p>
+        <p>CSS Exam</p>
+
     </div>
     <div class="middle">
         <h2>Е до тук ми стигна времето...</h2>
